--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,69 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 1
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
+
+  <ion-header>
+    <ion-toolbar class="toolbarBG">
+      <ion-title class="toolbarTitle">Overall Switches</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-subtitle class="name">
+        Active Switches
+      </ion-card-subtitle>
+
+        <ion-item class="item">
+          <ion-label class="subtitle">Kitchen</ion-label>
+          <ion-icon size="large" name="fast-food" slot="start" style="color: #d65e27"></ion-icon>
+          <ion-badge slot="end">22</ion-badge>
+        </ion-item>
+        <ion-item class="item">
+          <ion-label class="subtitle">Bedroom</ion-label>
+          <ion-icon size="large" name="bed" slot="start" style="color: #32be20"></ion-icon>
+          <ion-badge slot="end">2</ion-badge>
+        </ion-item>
+        <ion-item class="item">
+          <ion-label class="subtitle">Bathroom</ion-label>
+          <ion-icon size="large" name="water" slot="start" style="color: #2790d6"></ion-icon>
+          <ion-badge slot="end">1</ion-badge>
+        </ion-item>
+        <ion-item class="item">
+          <ion-label class="subtitle">Living Room</ion-label>
+          <ion-icon size="large" name="desktop" slot="start" style="color: #be207c"></ion-icon>
+          <ion-badge slot="end">4</ion-badge>
+        </ion-item>
+
+      </ion-card-header>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-subtitle class="name">
+        Inactive Switches
+      </ion-card-subtitle>
+
+      <ion-item class="item">
+        <ion-label class="subtitle">Kitchen</ion-label>
+        <ion-icon size="large" name="fast-food" slot="start" style="color: #d65e27"></ion-icon>
+        <ion-badge slot="end">0</ion-badge>
+      </ion-item>
+      <ion-item class="item">
+        <ion-label class="subtitle">Bedroom</ion-label>
+        <ion-icon size="large" name="bed" slot="start" style="color: #32be20"></ion-icon>
+        <ion-badge slot="end">0</ion-badge>
+      </ion-item>
+      <ion-item class="item">
+        <ion-label class="subtitle">Bathroom</ion-label>
+        <ion-icon size="large" name="water" slot="start" style="color: #2790d6"></ion-icon>
+        <ion-badge slot="end">2</ion-badge>
+      </ion-item>
+      <ion-item class="item">
+        <ion-label class="subtitle">Living Room</ion-label>
+        <ion-icon size="large" name="desktop" slot="start" style="color: #be207c"></ion-icon>
+        <ion-badge slot="end">3</ion-badge>
+      </ion-item>
+
+      </ion-card-header>
+  </ion-card>
+
 </ion-content>
