--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,40 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 3
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
+
+  <ion-header>
+    <ion-toolbar class="toolbarBG">
+      <ion-title class="toolbarTitle">Account Settings</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <ion-card class="formCard">
+    <ion-card-content>
+      
+      <div class="textEmail">
+          <ion-label position="floating" color="warning">
+            <ion-icon class="iconEmail" slot="end" name="mail" position="floating" style="color: #eeac00"></ion-icon>
+            <ion-label>Email:</ion-label>
+          </ion-label> 
+          <ion-item>
+            <ion-label class="Email">-- Sample Email --</ion-label>
+          </ion-item>
+      </div>           
+
+      <div class="textUsername">
+        <ion-label position="floating" color="warning">
+          <ion-icon class="iconUsername" slot="end" name="person" position="floating" style="color: #eeac00"></ion-icon>
+          <ion-label>Username:</ion-label>
+        </ion-label> 
+        <ion-item>
+          <ion-label class="Username">-- Sample Username --</ion-label>
+        </ion-item>
+    </div>                    
+
+        <div class="formLogout">
+          <ion-button href="" expand="block" type="button">
+            <ion-icon class="iconPerson" slot="start" name="person-add-outline"></ion-icon>
+            <div class="textLogout">Logout</div>
+          </ion-button>
+        </div>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
