--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,48 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 2
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
+
+  <ion-header>
+    <ion-toolbar class="toolbarBG">
+      <ion-title class="toolbarTitle">Modify Switches</ion-title>
     </ion-toolbar>
   </ion-header>
+  
+  <ion-card *ngFor="let item of todoListLight">
+    <ion-card-header>
+      <ion-card-subtitle class="name">
+        {{item.Lightname}}
+      </ion-card-subtitle>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+        <ion-item class="item">
+          <ion-label class="subtitle">{{item.Location}}</ion-label>
+
+          <ion-toggle [(ngModel)]="testId"></ion-toggle>
+
+          <ion-avatar class="avatarSwitch" slot="end">
+            <img *ngIf="item.Switch == 'Off'" src="../../assets/Logo/SwitchOff.png">
+            <img *ngIf="item.Switch == 'On'" src="../../assets/Logo/SwitchOn.png">
+          </ion-avatar>
+
+          <ion-icon *ngIf="item.Location == 'Kitchen'" size="large" name="fast-food" slot="start" style="color: #d65e27"></ion-icon>
+          <ion-icon *ngIf="item.Location == 'Living Room'" size="large" name="Desktop" slot="start" style="color: #be207c"></ion-icon>
+          <ion-icon *ngIf="item.Location == 'Bedroom'" size="large" name="Bed" slot="start" style="color: #32be20"></ion-icon>
+          <ion-icon *ngIf="item.Location == 'Bathroom'" size="large" name="Water" slot="start" style="color: #2790d6"></ion-icon>
+        </ion-item>
+
+
+
+        <ion-row>
+            <ion-button class="itemTrash">
+            <ion-icon name="trash" style="color: #ffffff"></ion-icon>
+            </ion-button>
+        </ion-row>
+      </ion-card-header>
+  </ion-card>
+
+
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button color="light" (click)="addLight()"> 
+      <ion-icon name="add" style="color: #eeac00"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+
 </ion-content>
