--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,52 +1,101 @@
-
 <ion-content>
   <ion-img class="Logo" src="../../assets/Logo/Switch Logo.png"></ion-img>
 
   <ion-card class="formLoginCard">
     <ion-card-content>
-    <form class="mt-3 mb-3" id="prospects_form" ngNativeValidate (submit)="login($event)">
-
-      <div class="formEmail">
-        <ion-item class="formEmail">
-          <div class="textEmail"> 
-            <ion-label position="floating" color="warning">
-              <ion-icon class="iconMail" slot="end" name="mail-outline" position="floating"></ion-icon>
-              Email
-            </ion-label> 
-          </div>          
-        <ion-input class="inputEmail" type="email" id="email" color="warning" required></ion-input>      
-        </ion-item>
-      </div>
+      <form
+        class="mt-3 mb-3"
+        id="prospects_form"
+        ngNativeValidate
+        (submit)="login($event)"
+      >
+        <div class="formEmail">
+          <ion-item class="formEmail">
+            <div class="textEmail">
+              <ion-label position="floating" color="warning">
+                <ion-icon
+                  class="iconMail"
+                  slot="end"
+                  name="mail-outline"
+                  position="floating"
+                ></ion-icon>
+                Email
+              </ion-label>
+            </div>
+            <ion-input
+              class="inputEmail"
+              type="email"
+              id="email"
+              color="warning"
+              [(ngModel)]="email"
+              [ngModelOptions]="{standalone: true}"
+              required
+            ></ion-input>
+          </ion-item>
+        </div>
 
         <div class="formPassword">
           <ion-item class="Password">
-            <div class="textPassword">  
+            <div class="textPassword">
               <ion-label position="floating" color="warning">
-                <ion-icon class="iconKey" slot="start" name="key-outline" position="floating">
+                <ion-icon
+                  class="iconKey"
+                  slot="start"
+                  name="key-outline"
+                  position="floating"
+                >
                 </ion-icon>
                 Password
               </ion-label>
-            </div>  
-            <ion-icon style="margin-top: 15%" class="iconEye"color="warning" slot="end" [name]="passwordIcon" class="passwordIcon" (click)="hideShowPassword()"></ion-icon>
-            <ion-input id="email" color="warning" [type]="passwordType">  
+            </div>
+            <ion-icon
+              style="margin-top: 15%"
+              class="iconEye"
+              color="warning"
+              slot="end"
+              [name]="passwordIcon"
+              class="passwordIcon"
+              (click)="hideShowPassword()"
+            ></ion-icon>
+            <ion-input
+              id="email"
+              color="warning"
+              [(ngModel)]="password"
+              [ngModelOptions]="{standalone: true}"
+              [type]="passwordType"
+            >
             </ion-input>
           </ion-item>
         </div>
 
         <div class="formLogin">
-          <ion-button href="tabs" expand="block" type="submit" id="loginButton" color="warning">
-            <ion-icon class="iconFlash" slot="start" style="color: #ffffff" name="flash-outline"></ion-icon>
+          <ion-button
+            href="tabs"
+            expand="block"
+            type="submit"
+            id="loginButton"
+            color="warning"
+          >
+            <ion-icon
+              class="iconFlash"
+              slot="start"
+              style="color: #ffffff"
+              name="flash-outline"
+            ></ion-icon>
             <div class="textLogin">Login</div>
           </ion-button>
         </div>
 
         <div class="formRegister">
           <ion-button href="registration" expand="block" type="button">
-            <ion-icon class="iconPerson" slot="start" name="person-add-outline"></ion-icon>
+            <ion-icon
+              class="iconPerson"
+              slot="start"
+              name="person-add-outline"
+            ></ion-icon>
             <div class="textRegister">Register</div>
           </ion-button>
         </div>
-
       </form>
     </ion-card-content>
   </ion-card>
