--- a/src/app/add-light/add-light.page.scss
+++ b/src/app/add-light/add-light.page.scss
@@ -1,43 +1,57 @@
-.toolbarBG{
-    --background: #eeac00;
+.toolbarBG {
+  --background: #eeac00;
 }
 
-.toolbarTitle{
+.toolbarTitle {
+  font-family: "Overseer";
+  color: #ffffff;
+  font-size: 250%;
+  padding-right: 10px;
+}
+
+.formCard {
+  margin-top: 30%;
+}
+
+.textarea {
+  --background: #ffffff;
+  ion-label {
     font-family: "Overseer";
-    color: #ffffff;
-    font-size: 250%;
-    padding-right: 10px;
+    font-size: 125%;
+    color: #eeac00;
+  }
 }
 
-.textarea{
-    --background: #ffffff;
-    ion-label{
-        font-family: "Overseer";
-        font-size: 125%;
-        color: #eeac00;
-    }
-}
-
-.textLocation{
-    ion-label{
-        font-family: "Overseer";
-        font-size: 150%;
-    }
-    color: #ffffff;
-}
-
-.addButton{
-    --ion-color-primary: #4bbb00;
-    --color: #ffffff !important;
+.textLocation {
+  ion-label {
     font-family: "Overseer";
-    font-size: 160%;
-    border-radius: 40%;
-    margin-top: 5%;
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-bottom: 5%;
+    font-size: 150%;
+  }
+  color: #ffffff;
+}
+
+.addButton {
+  --ion-color-primary: #4bbb00;
+  --color: #ffffff !important;
+  font-family: "Overseer";
+  font-size: 160%;
+  border-radius: 40%;
+  margin-top: 5%;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-bottom: 5%;
 }
 
 ion-content {
-    --ion-background-color:#eeac00;
-  }
+  --ion-background-color: #eeac00;
+}
+
+ion-select {
+  font-family: "Overseer";
+  font-size: 150%;
+  color: white !important;
+}
+
+ion-text-area {
+  font-family: "Overseer" !important;
+}
