--- a/src/app/registration/registration.page.html
+++ b/src/app/registration/registration.page.html
@@ -1,70 +1,140 @@
-
 <ion-content class="background">
-  <ion-item class="formTitle">  
+  <ion-item class="formTitle">
     <ion-text>
       <h1 class="Title">Registration</h1>
     </ion-text>
   </ion-item>
-  
+
   <ion-card class="formCard">
     <ion-card-content>
-      <form class="mt-3 mb-3" id="prospects_form" ngNativeValidate (submit)="login($event)">
+      <form
+        class="mt-3 mb-3"
+        id="prospects_form"
+        ngNativeValidate
+        (submit)="register($event)"
+      >
         <div class="formEmail">
           <ion-item class="formEmail">
-            <div class="textEmail"> 
+            <div class="textEmail">
               <ion-label position="floating" color="warning">
-                <ion-icon class="iconMail" slot="end" name="mail-outline" position="floating"></ion-icon>
+                <ion-icon
+                  class="iconMail"
+                  slot="end"
+                  name="mail-outline"
+                  position="floating"
+                ></ion-icon>
                 Email
-              </ion-label> 
-            </div>          
-          <ion-input type="email" id="email" color="warning" required></ion-input>      
+              </ion-label>
+            </div>
+            <ion-input
+              type="email"
+              id="email"
+              color="warning"
+              [(ngModel)]="email"
+              [ngModelOptions]="{standalone: true}"
+              required
+            ></ion-input>
           </ion-item>
         </div>
-      
+
         <ion-item class="formUsername">
-          <div class="textUsername"> 
+          <div class="textUsername">
             <ion-label position="floating" color="warning">
-              <ion-icon class="iconMail" slot="end" name="person-outline" position="floating"></ion-icon>
+              <ion-icon
+                class="iconMail"
+                slot="end"
+                name="person-outline"
+                position="floating"
+              ></ion-icon>
               Username
-            </ion-label> 
-          </div>          
-        <ion-input type="email" id="email" color="warning" required></ion-input>      
+            </ion-label>
+          </div>
+          <ion-input
+            type="text
+            "
+            id="email"
+            color="warning"
+            [(ngModel)]="username"
+            [ngModelOptions]="{standalone: true}"
+            required
+          ></ion-input>
         </ion-item>
 
         <div class="formPassword">
           <ion-item class="Password">
-            <div class="textPassword">  
+            <div class="textPassword">
               <ion-label position="floating" color="warning">
-                <ion-icon class="iconKey" slot="start" name="key-outline" position="floating">
+                <ion-icon
+                  class="iconKey"
+                  slot="start"
+                  name="key-outline"
+                  position="floating"
+                >
                 </ion-icon>
                 Password
               </ion-label>
-            </div>  
-            <ion-icon class="iconEye"color="warning" slot="end" [name]="passwordIcon" class="passwordIcon" (click)="hideShowPassword()"></ion-icon>
-            <ion-input id="email" color="warning" [type]="passwordType">  
+            </div>
+            <ion-icon
+              style="margin-top: 15%"
+              class="iconEye"
+              color="warning"
+              slot="end"
+              [name]="passwordIcon"
+              class="passwordIcon"
+              (click)="hideShowPassword()"
+            ></ion-icon>
+            <ion-input
+              id="email"
+              color="warning"
+              [(ngModel)]="password"
+              [ngModelOptions]="{standalone: true}"
+              [type]="passwordType"
+            >
             </ion-input>
           </ion-item>
         </div>
 
         <div class="formPasswordRedo">
           <ion-item class="Password">
-            <div class="textPasswordRedo">  
+            <div class="textPasswordRedo">
               <ion-label position="floating" color="warning">
-                <ion-icon class="iconKey" slot="start" name="key-outline" position="floating">
+                <ion-icon
+                  class="iconKey"
+                  slot="start"
+                  name="key-outline"
+                  position="floating"
+                >
                 </ion-icon>
                 Confirm password
               </ion-label>
-            </div>  
-            <ion-icon class="iconEye"color="warning" slot="end" [name]="passwordIcon" class="passwordIcon" (click)="hideShowPassword()"></ion-icon>
-            <ion-input id="email" color="warning" [type]="passwordType">  
+            </div>
+            <ion-icon
+              style="margin-top: 15%"
+              class="iconEye"
+              color="warning"
+              slot="end"
+              [name]="passwordIcon2"
+              class="passwordIcon"
+              (click)="hideShowPassword2()"
+            ></ion-icon>
+            <ion-input
+              id="email"
+              color="warning"
+              [(ngModel)]="cpassword"
+              [ngModelOptions]="{standalone: true}"
+              [type]="passwordType2"
+            >
             </ion-input>
           </ion-item>
         </div>
 
-
         <div class="formRegister">
-          <ion-button href="" expand="block" type="button">
-            <ion-icon class="iconPerson" slot="start" name="person-add-outline"></ion-icon>
+          <ion-button href="" expand="block" type="submit">
+            <ion-icon
+              class="iconPerson"
+              slot="start"
+              name="person-add-outline"
+            ></ion-icon>
             <div class="textRegister">Register</div>
           </ion-button>
         </div>
@@ -74,9 +144,13 @@
 
   <div class="formBack">
     <ion-button href="" expand="block" type="button">
-      <ion-icon class="iconBack" slot="start" name="caret-back-outline" style="color: white"></ion-icon>
+      <ion-icon
+        class="iconBack"
+        slot="start"
+        name="caret-back-outline"
+        style="color: white"
+      ></ion-icon>
       <div class="textBack">Back</div>
     </ion-button>
   </div>
-  
 </ion-content>
